# brights

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  config.yaml  ideas.md  issues.md  readme.md  todo.md
assets/shaders/: terrain.wgsl
assets/shaders/lib/: byteOperations.wgsl  lighting.wgsl  sampling.wgsl  sphere.wgsl
assets/shaders/sprite/: bindings.wgsl  sprite.wgsl
assets/shaders/terrain/: bindings.wgsl  constants.wgsl  heightfield.wgsl  material.wgsl  normal.wgsl  questionableUtil.wgsl  raymarch.wgsl  terrain.wgsl  tile.wgsl  tilemap.wgsl
src/: application.hpp  game.hpp  graphics.hpp  input.hpp  main.cpp  wgpuHelpers.hpp  wgslPreprocessor.hpp  window.hpp
src/app/: application.hpp  applicationMeta.hpp  config.hpp  game.hpp  worldView.hpp
src/app/input/: event.hpp  input.hpp
src/app/settings/: settings.hpp  yamlConversions.hpp
src/core/: settings.hpp
src/core/graphics/: camera.hpp  gameGraphics.hpp  renderSettings.hpp
src/core/resources/: resource.cpp  resource.hpp
src/core/world/: chunk.hpp  chunkMesher.cpp  chunkMesher.hpp  entity.hpp  heightField.hpp  planet.hpp  planetProjection.hpp  tile.hpp  tileInspection.hpp  world.hpp  worldArea.hpp  worldEdit.hpp  worldGenerator.hpp  worldRenderAdapter.hpp  worldView.hpp
src/core/world/contents/: atlasCell.hpp  entity.hpp  tile.hpp
src/core/world/ecs/: animationSystem.hpp  cameraFollowSystem.hpp  commonMath.hpp  components.hpp  cursorFacingSystem.hpp  entitySimulation.hpp  hierarchySystem.hpp  movementSystem.hpp  playerInputSystem.hpp  spriteGather.hpp  spriteHeightSystem.hpp  system.hpp  systemContext.hpp
src/core/world/generation/: worldGenerator.hpp
src/core/world/graphics/: chunkMesher.cpp  chunkMesher.hpp  planetGraphics.hpp  shaderBindings.hpp  spriteInstance.hpp  worldRenderAdapter.hpp
src/core/worldInteraction/: tileInspection.hpp  worldEdit.hpp
src/native/: window.hpp
src/platform/: event.hpp  input.hpp  window.hpp
src/render/: camera.hpp  gpuBuffer.hpp  gpuContext.hpp  gpuHelpers.hpp  gpuTexture.hpp  graphicsContext.hpp  textureImage.hpp  wgslPreprocessor.hpp
src/render/core/: camera.hpp  wgslPreprocessor.hpp
src/render/native/: gpuBuffer.hpp  gpuContext.hpp  gpuHelpers.hpp  gpuTexture.hpp  graphicsContext.hpp
src/ui/: gui.hpp  settingsPanel.hpp  tileInspectorPanel.hpp  worldEditPanel.hpp
src/util/: bitmask.hpp  hash.hpp  logger.cpp  logger.hpp  metaUtil.hpp  registry.hpp  threadpool.hpp  wgslPreprocessor.hpp
src/world/: chunk.hpp  chunkMesher.hpp  tile.hpp  world.hpp  worldGenerator.hpp  worldRenderAdapter.hpp
tools/: format_includes.py
